# Project_Battle_City_Game

./: .clang-format  CMakeLists.txt
res/: resourses.json
res/shaders/: Shader_Vertex.txt  Sprite_Fragment.txt  fragment.txt  vertex.txt
resource/shaders/: fragment.txt  vertex.txt
source/: main.cpp
source/Game/: Game.cpp  Game.h  Game_Object.cpp  Game_Object.h  Level.cpp  Level.h  Player_Tank.cpp  Player_Tank.h
source/Game/GameObjects/: Beton_Wall.cpp  Beton_Wall.h  Border.cpp  Border.h  Brick_Wall.cpp  Brick_Wall.h  Bullet.cpp  Bullet.h  Eagle.cpp  Eagle.h  Game_Object.cpp  Game_Object.h  Ice.cpp  Ice.h  Player_Tank.cpp  Player_Tank.h  Trees.cpp  Trees.h  Water.cpp  Water.h
source/Physics/: Physics_Engine.cpp  Physics_Engine.h
source/Renderer/: Animated_Sprite.cpp  Animated_Sprite.h  Index_Buffer.cpp  Index_Buffer.h  Renderer.cpp  Renderer.h  Shader_Program.cpp  Shader_Program.h  Sprite.cpp  Sprite.h  Sprite_Animator.cpp  Sprite_Animator.h  Texture2D.cpp  Texture2D.h  Vertex_Array.cpp  Vertex_Array.h  Vertex_Buffer.cpp  Vertex_Buffer.h  Vertex_Buffer_Layout.cpp  Vertex_Buffer_Layout.h
source/Resources/: Resource_Manager.cpp  Resource_Manager.h  stb_image.h
source/System/: Timer.cpp  Timer.h
src/: main.cpp
src/Renderer/: Shader_Program.cpp  Shader_Program.h
